Login controller and xml files are modified and some css files added

--- a/AcePos/src/main/webapp/resources/theme1/css/mainstyle.css
+++ b/AcePos/src/main/webapp/resources/theme1/css/mainstyle.css
@@ -15,7 +15,7 @@ body{
     margin-top: 0px;
 }
 header {
-    background-color: #5aadec;
+    background-color: #44947a;
     color: black;
     text-align:center;
     padding:5px;
