--- a/AcePos/src/main/webapp/resources/theme1/css/menustyles.css
+++ b/AcePos/src/main/webapp/resources/theme1/css/menustyles.css
@@ -41,7 +41,7 @@
     background: -moz-linear-gradient(#36aae7, #1fa0e4);
     background: -o-linear-gradient(#36aae7, #1fa0e4);
     background: -ms-linear-gradient(#36aae7, #1fa0e4);
-    background: linear-gradient(#36aae7, #1fa0e4);
+    background: linear-gradient(#3d5799, #1fa0e4);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15);
 }
 #cssmenu > ul > li > a:hover,
@@ -53,7 +53,7 @@
     background: -moz-linear-gradient(#1fa0e4, #1992d1);
     background: -o-linear-gradient(#1fa0e4, #1992d1);
     background: -ms-linear-gradient(#1fa0e4, #1992d1);
-    background: linear-gradient(#1fa0e4, #1992d1);
+    background: linear-gradient(#3d5799, #1992d1);
 }
 #cssmenu > ul > li.open > a {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.15);
