--- a/AcePos/src/main/webapp/resources/theme1/css/mainstyle.css
+++ b/AcePos/src/main/webapp/resources/theme1/css/mainstyle.css
@@ -37,6 +37,7 @@ nav {
     padding: 0px;
 }
 section {
+    background-color: #3d5799;
     float:left;
     padding:10px;
     background-color: #f5f7fb;
